file(
	GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

set(LIB_PROJECT_TITLE ${SOLUTION_TITLE}_lib)

add_library(
	${LIB_PROJECT_TITLE} STATIC ${SRC_FILES}
)

target_include_directories(
	${LIB_PROJECT_TITLE} PUBLIC 
	${CMAKE_CURRENT_SOURCE_DIR}/../include
)

target_compile_features(
	${LIB_PROJECT_TITLE} PUBLIC 
	cxx_std_17
)