set(TEST_PROJECT_TITLE ${SOLUTION_TITLE}_test)

file(
	GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

add_executable(
	${TEST_PROJECT_TITLE} 
	${SRC_FILES}
)

target_link_libraries(
	${TEST_PROJECT_TITLE} PRIVATE
	${SOLUTION_TITLE}_lib
)